...
              <Button
                variant="outline"
                title="Leave Guild"
                className="border-error"
                onPress={handleLeave}
                disabled={leaveGuild.isPending}
                testID="LeaveGuildButton"
              >
                <LogOut size={18} color="#c64545" />
                <Text className="font-body-medium text-button text-error">
                  Leave Guild
                </Text>
              </Button>
...
