...
              {error}
            </Text>
          )}

          <form.Subscribe selector={(state) => state.isSubmitting}>
            {() => (
              <Button onPress={form.handleSubmit} disabled={isPending} testID="CreateQuest">
                {isPending ? (
                  <ActivityIndicator size="small" color="#ffffff" />
                ) : (
                  <Text className="font-body-medium text-button text-primary-foreground">
                    Next: Create Side Quests
                  </Text>
...
