...
            onRefresh={onRefresh}
          />
        }
      >
        {showAddButton && classId && (
          <TouchableOpacity
            testID="CreateQuestButton"
            onPress={() =>
              router.push({
                pathname: "/quest/manage" as any,
                params: { classId, type: activeTab },
              })
            }
...
