...
          <form.Subscribe selector={(state) => state.isSubmitting}>
            {() => (
              <Button
                onPress={form.handleSubmit}
                disabled={isPending}
                className="mt-lg"
                testID="CreateRole"
              >
                {isPending ? (
                  <ActivityIndicator size="small" color="#ffffff" />
                ) : (
                  <Text className="font-body-medium text-button text-primary-foreground">
                    {isEditing ? "Save Changes" : "Create Role"}
...
